# abc

./: CMakeLists.org  CMakeLists.txt  CMakeLists.txt.org  Dependencies.cmake  Dependencies.cmake.org  README.md  abc.cpp  abc.cpp.org  vcpkg-configuration.evs.json  vcpkg.json  vcpkg.json.full
data/: bha.txt
lib/: abc_lib.cpp  abc_lib.h
vcprj/: debug_mp_launch.vcprj  debug_mp_task.vcprj  vcprj.bat  vcprj_code-workspace.json  vcprj_help.vcprj  vcprj_launch.json  vcprj_tasks.json  vcprj_var_def.BHA.json
